--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Doubt VII</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
+integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
+crossorigin="anonymous">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,11 +21,48 @@
     <![endif]-->
   </head>
   <body>
-    <h1>DOUBT VII <span>Da Open Umeå Bloodbowl Tournament</span></h1>
+    <h1>DOUBT SE7EN - Seven deadly sins. Seven ways to doubt</h1>
+    <h2>Da Open Umeå Bloodbowl Tournament 2016</h2>
+
+    <p>DOUBT VII är sjunde upplagan av Norrlands äldsta NAF-sanktionerade Blood Bowl-turnering, mitt i Norrlands huvudstad Umeå.</p>
+
+<h3>Datum</h3>
+<p>9-10 Januari, 2016</p>
+
+<h3>Lokal</h3>
+<p>Hotell Björken</p>
+
+<h3>Avgift</h3>
+<ol>
+  <li>200kr vid föranmälan</li>
+  <li>250kr om man betalar i dörren</li>
+</ol>
+<p>NAF-medlemmar får 50kr rabatt.</p>
+
+<h3>Föranmälan</h3>
+<ol>
+<li>Föranmälan betalas in på bankkonto 7947-1235073 senast den 1:a December. Skriv ditt namn eller ditt NAF-nummer som meddelande, så att det går att lista ut vet vem som betalat.</li>
+<li>Skicka även ett mail till stareater@gmail.com med följande <ol>
+  <li>Ditt namn</li>
+  <li>Om du är NAF-medlem: ditt NAF-namn och NAF-nummer</li>
+  <li>Ditt roster (annars blir det samma kostnad som för de som betalar vid dörren)</li>
+</ol></li></ol>
+
+<h3>Frågor</h3>
+<ul>
+  <li>Via mail till stareater@gmail.com</li>
+  <li>På forumet forum.swebba.se (http://forum.swebba.se/index.php?p=/discussion/502/doubt-se7en-umea-9-10-januari-2016)</li>
+</ul>
+
+<h3>Schema</h3>
+<p><a href="https://calendar.google.com/calendar/embed?src=o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com&ctz=Europe/Stockholm">Google-kalender</a></p>
+</p>Efter lördagens matcher finns tillfälle för middag och samvaro för dem som vill.</p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"
+    integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
+    crossorigin="anonymous"></script>
   </body>
 </html>
