--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ crossorigin="anonymous">
 </div>
 
 <div class="col-lg-3 col-md-6">
-  <a href="http://www.impactminiatures.com" class="col-lg-12"><img class="center-block image-responsive img-rounded" src="http://www.impactminiatures.com/imgs/logo.gif"/></a>
+  <a href="http://www.impactminiatures.com" class="col-lg-12"><img class="center-block img-responsive img-rounded" src="http://www.impactminiatures.com/imgs/logo.gif"/></a>
 </div>
 
 </div>
@@ -135,7 +135,7 @@ crossorigin="anonymous">
 </div>
 
 <div class="row">
-  <a href="http://www.thearmypainter.com" class="col-lg-12 col-xs-12"><img class="center-block image-responsive" src="http://www.thearmypainter.com/gfx/logo_large.png"/></a>
+  <a href="http://www.thearmypainter.com" class="col-lg-12 col-xs-12"><img class="center-block img-responsive" src="http://www.thearmypainter.com/gfx/logo_large.png"/></a>
 </div>
 
 <div class="row">
