--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ crossorigin="anonymous">
   <li><i class="fa-li fa fa-check-square"></i>Två kopior av ditt Roster. En lämnas in vid registreringen. Om möjligt undvik handskrivna roster för tydlighets skull.</li>
   <li><i class="fa-li fa fa-check-square"></i>Ditt lag. Alla modeller måste vara någorlunda WYSIWYG, och det skall vara möjligt att skilja spelare och spelartyper åt. Skall en proxy användas skall den ha ett uppenbart kännemärke.
     <em>Varje</em> spelare som inte är målad med minst tre färger ger -1 poäng i turneringen.
-  <li><i class="fa-li fa fa-check-square"></i>Inget krav på att ta med sig spelet Blood Bowl. Tänk dock på att om inte minst 50% av coacherna tar med spelet så går inte turneringen att genomföra!
+  <li><i class="fa-li fa fa-square"></i>Spelplan om du har en. Inget krav för att deltaga, men om inte minst 50% av coacherna tar med plan så går inte turneringen att genomföra!
 </ul>
 </div>
 
