--- a/index.html
+++ b/index.html
@@ -101,8 +101,10 @@ crossorigin="anonymous">
 <ul>
 <li>Mellan varje match är det 15 minuters paus för swisslottning och utannonsering av nästa motståndare</li>
 <li>Efter lördagens matcher finns tillfälle för middag och samvaro för dem som vill.</li>
-<li><a href="https://calendar.google.com/calendar/embed?src=o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com&ctz=Europe/Stockholm">Schemat som Google-kalender</a></li>
 </ul>
+<p><a class="btn btn-default" href="https://calendar.google.com/calendar/embed?src=o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com&ctz=Europe/Stockholm"><i class="fa fa-calendar"></i> Google-kalender</a>
+  <a class="btn btn-default" href="https://calendar.google.com/calendar/ical/o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com/public/basic.ics"><i class="fa fa-calendar"></i> ical</a>
+  <a class="btn btn-default" href="https://calendar.google.com/calendar/feeds/o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com/public/basic"><i class="fa fa-calendar"></i> xml</a></p>
 <div class="col-xs-6">
 <h4>Lördag</h4>
 <dl>
