förtydligande om föranmälan

--- a/index.html
+++ b/index.html
@@ -77,12 +77,15 @@ crossorigin="anonymous">
 
 <div class="col-md-6 col-lg-4">
 <h3>Föranmälan</h3>
+<p>För att minska administrationen i direkt anslutning till turneringen uppskattar vi föranmälningar.
+  Det viktigaste är att vi tidigt får en uppfattning om hur många som kommer. Näst viktigast att vi kan rätta eventuella fel i laguttagning.</p>
 <ol>
 <li>Föranmälan betalas in på bankkonto <pre>7947-1235073</pre> senast den 1:a December. Skriv ditt namn eller ditt NAF-nummer som meddelande, så att det går att lista ut vet vem som betalat.</li>
-<li>Skicka även ett mail till <a href="mailto:stareater@gmail.com">stareater@gmail.com</a> med följande <ul class="fa-ul">
+<li>Skicka mail till <a href="mailto:stareater@gmail.com">stareater@gmail.com</a> med följande <ul class="fa-ul">
   <li><i class="fa-li fa fa-check-square-o"></i>Ditt namn</li>
   <li><i class="fa-li fa fa-check-square-o"></i>Om du är NAF-medlem: ditt NAF-namn och NAF-nummer</li>
-  <li><i class="fa-li fa fa-check-square-o"></i>Ditt roster (annars blir det samma kostnad som för de som betalar vid dörren)</li>
+  <li><i class="fa-li fa fa-square-o"></i>Ditt roster. Kan skickas separat senare om du inte bestämt dig vad du ska spela (dock senast 1:a december för att räknas som föranmäld).
+    Om inte roster ha skickats in i tid blir det samma kostnad som för dem som betalar i dörren.</li>
 </ul></li></ol>
 </div>
 
