--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Doubt VII</title>
+    <title>Doubt VIII</title>
 
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
@@ -37,18 +37,17 @@ crossorigin="anonymous">
   <body>
     <div class="container">
     <div class="jumbotron well">
-    <h1>DOUBT SE7EN</h1>
-    <h2>Da Open Umeå Bloodbowl Tournament, 9-10 Januari 2016</h2>
-    <h2>Seven deadly sins. Seven ways to doubt</h2>
+    <h1>DOUBT VIII</h1>
+    <h2>Da Open Umeå Bloodbowl Tournament, 7-8 Januari 2017</h2>
 
-    <p>DOUBT VII är sjunde upplagan av Norrlands äldsta <a href="http://www.thenaf.net/">NAF-sanktionerade</a> Blood Bowl-turnering, mitt i Norrlands huvudstad Umeå.</p>
+    <p>DOUBT VIII är åttonde upplagan av Norrlands äldsta <a href="http://www.thenaf.net/">NAF-sanktionerade</a> Blood Bowl-turnering, mitt i Norrlands huvudstad Umeå.</p>
   </div>
   <div class="row">
 
 <div class="col-lg-3 col-md-6">
 <h3>Lokal</h3>
-<p><a href="http://www.sodexomeetings.se/bjorken/">Hotell Björken</a>, direkt i anslutning till resecentrum för Norrlands Universitetssjukhus,
-  Umeå Universitet och järnvägsstationen Umeå Östra. <a href="http://www.tabussen.nu/flygbussen/tidtabell-och-karta/tidtabell/">Flygbussen</a> stannar här.</p>
+<p>Incrade Gallerian, i anslutning till <a href="https://www.worldofboardgames.com">WorldofBoardGames</a> lokaler.
+  <a href="https://kartor.eniro.se/m/9d4dm" title="karta">Björnvägen 11 i Umeå</a></p>
 </div>
 
 <div class="col-lg-3 col-md-6">
@@ -64,12 +63,12 @@ crossorigin="anonymous">
 <h3>Frågor</h3>
 <ul>
   <li>Via mail till <a href="mailto:stareater@gmail.com">stareater@gmail.com</a></li>
-  <li>På forumet <a href="http://forum.swebba.se/index.php?p=/discussion/502/doubt-se7en-umea-9-10-januari-2016">forum.swebba.se</a></li>
+  <li>På forumet <a href="http://swebba.com/index.php?p=/discussion/702/">SweBBA</a></li>
 </ul>
 </div>
 
 <div class="col-lg-3 col-md-6">
-  <a href="http://www.impactminiatures.com" class="col-lg-12"><img class="center-block img-responsive img-rounded" src="http://www.impactminiatures.com/imgs/logo.gif"/></a>
+  <a href="http://www.gaspez-arts.com/" class="col-lg-12" title="Huvudsponsor"><img class="center-block img-responsive" src="GASPEZ.jpg" alt="gaspez arts"/></a>
 </div>
 
 </div>
@@ -80,7 +79,7 @@ crossorigin="anonymous">
 <p>För att minska administrationen i direkt anslutning till turneringen uppskattar vi föranmälningar.
   Det viktigaste är att vi tidigt får en uppfattning om hur många som kommer. Näst viktigast att vi kan rätta eventuella fel i laguttagning.</p>
 <ol>
-<li>Föranmälan betalas in på bankkonto <pre>7947-1235073</pre> senast den 1:a December. Skriv ditt namn eller ditt NAF-nummer som meddelande, så att det går att lista ut vet vem som betalat.</li>
+<li>Föranmälan betalas in på bankkonto <pre>7947-1235073</pre> eller via Swish <pre>0703980519</pre> senast den 1:a December. Skriv ditt namn eller ditt NAF-nummer som meddelande, så att det går att lista ut vet vem som betalat.</li>
 <li>Skicka mail till <a href="mailto:stareater@gmail.com">stareater@gmail.com</a> med följande <ul class="fa-ul">
   <li><i class="fa-li fa fa-check-square-o"></i>Ditt namn</li>
   <li><i class="fa-li fa fa-check-square-o"></i>Om du är NAF-medlem: ditt NAF-namn och NAF-nummer</li>
@@ -105,9 +104,6 @@ crossorigin="anonymous">
 <li>Mellan varje match är det 15 minuters paus för swisslottning och utannonsering av nästa motståndare</li>
 <li>Efter lördagens matcher finns tillfälle för middag och samvaro för dem som vill.</li>
 </ul>
-<p><a class="btn btn-default" href="https://calendar.google.com/calendar/embed?src=o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com&ctz=Europe/Stockholm"><i class="fa fa-calendar"></i> Google-kalender</a>
-  <a class="btn btn-default" href="https://calendar.google.com/calendar/ical/o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com/public/basic.ics"><i class="fa fa-calendar"></i> ical</a>
-  <a class="btn btn-default" href="https://calendar.google.com/calendar/feeds/o12jgfauq5sd4vcgknqd4ribsg%40group.calendar.google.com/public/basic"><i class="fa fa-calendar"></i> xml</a></p>
 <div class="col-xs-6">
 <h4>Lördag</h4>
 <dl>
@@ -137,10 +133,6 @@ crossorigin="anonymous">
 </div>
 </div>
 
-</div>
-
-<div class="row">
-  <a href="http://www.thearmypainter.com" class="col-lg-12 col-xs-12"><img class="center-block img-responsive" src="http://www.thearmypainter.com/gfx/logo_large.png"/></a>
 </div>
 
 <div class="row">
