--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ crossorigin="anonymous">
 </ul>
 </div>
 
-<div class="col-lg-3 col-md-6">
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-8">
   <a href="http://www.gaspez-arts.com/" class="col-lg-12" title="Huvudsponsor"><img class="center-block img-responsive" src="GASPEZ.jpg" alt="gaspez arts"/></a>
 </div>
 
@@ -132,6 +132,8 @@ crossorigin="anonymous">
 </dl>
 </div>
 </div>
+
+<a href="http://www.hungry-troll.com/" class="col-lg-8 col-md-6 col-sm-4" title="Huvudsponsor"><img class="center-block img-responsive" src="hungry.jpg" alt="Hungry troll"/></a>
 
 </div>
 
