larger mobile gazpez

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ crossorigin="anonymous">
 </ul>
 </div>
 
-<div class="col-lg-3 col-md-3 col-sm-6 col-xs-8">
+<div class="col-lg-3 col-md-3 col-sm-6">
   <a href="http://www.gaspez-arts.com/" class="col-lg-12" title="Huvudsponsor"><img class="center-block img-responsive" src="GASPEZ.jpg" alt="gaspez arts"/></a>
 </div>
 
