--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ crossorigin="anonymous">
       margin-top: 30px;
     }
     header {
-      color: #fff;
+      color: #ddd;
       background-image: url('goblin.png');
       background-size: cover;
       background-position: center bottom;
@@ -46,7 +46,7 @@ crossorigin="anonymous">
       font-family: 'Holtwood One SC', serif;
       font-size: 80px;
       color: #800;
-      text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
+      text-shadow:  -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
     }
     header h2 {
       color: #600;
@@ -54,6 +54,7 @@ crossorigin="anonymous">
     }
     header p {
       width: 60%;
+      font-size: 16px;
     }
     h2, h3, h4 {
       font-family: 'Bevan', cursive;
