separat mindre goblin

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Doubt X</title>
     <link href="https://fonts.googleapis.com/css?family=Bevan|Holtwood+One+SC" rel="stylesheet">
     <meta property="og:description"        content="Da Open Umeå BloodBowl Tournament 12-13 Januari 2019" />
-    <meta property="og:image"              content="/goblin.png" />
+    <meta property="og:image"              content="/goblin.sq.png" />
     <!-- Bootstrap -->
     <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
