giant head visible in xs

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ crossorigin="anonymous">
     body {
       padding-bottom: 50px;
       background-image: url('giant.svg');
-      background-position: right top;
+      background-position: right 8vmin;
       background-repeat: no-repeat;
-      background-size: 60vmin;
+      background-size: 58vmin;
     }
 
     dl {
@@ -141,6 +141,10 @@ crossorigin="anonymous">
 
     a {
       font-weight: bold;
+    }
+
+    p {
+      max-width: 500px;
     }
 
     li a {
