simplify giant position

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ crossorigin="anonymous">
     body {
       padding-bottom: 50px;
       background-image: url('giant.svg');
-      background-position: right 8vmin;
+      background-position: right 0;
       background-repeat: no-repeat;
-      background-size: 58vmin;
+      background-size: 57vmin;
     }
 
     dl {
@@ -143,10 +143,6 @@ crossorigin="anonymous">
       font-weight: bold;
     }
 
-    p {
-      max-width: 500px;
-    }
-
     li a {
       display: block;
       margin-bottom: 15px;
@@ -170,7 +166,7 @@ crossorigin="anonymous">
     <div class="row">
   <header class="header">
   <img src="giant.sq.png" class="giant"/>
-  <div class="col-lg-12">
+  <div class="col-lg-12 col-xs-11">
     <h2>Da Open Umeå BloodBowl Tournament</h2>
     <h1>DOUBT XII</h1>
   </div>
@@ -211,7 +207,7 @@ crossorigin="anonymous">
 </div>
 <div class="row">
 
-<div class="col-md-7 col-lg-4 col-sm-5">
+<div class="col-lg-4 col-md-7 col-sm-5 col-xs-12">
 <h3>Att ta med</h3>
 <ul class="fa-ul">
   <li><i class="fa-li fa fa-check-square"></i>Ditt lag. Alla modeller måste vara någorlunda WYSIWYG, och det skall vara möjligt att skilja spelare och spelartyper åt. Skall en proxy användas skall den ha ett uppenbart kännemärke.
@@ -237,7 +233,7 @@ crossorigin="anonymous">
 </dl>
 </div>
 
-<div class="col-sm-12 col-md-12 schema col-lg-4">
+<div class="col-sm-12 col-md-12 schema col-lg-4 col-xs-12">
 <h3>Schema</h3>
 <p>Mellan varje match är det 15 minuters paus för swisslottning och utannonsering av nästa motståndare</p>
 <p>Efter lördagens matcher finns tillfälle för middag och samvaro för dem som vill.</p>
