--- a/index.html
+++ b/index.html
@@ -166,10 +166,8 @@ crossorigin="anonymous">
     <div class="row">
   <header class="header">
   <img src="giant.sq.png" class="giant"/>
-  <div class="col-lg-12 col-xs-10">
-    <h2>Da Open Umeå BloodBowl Tournament</h2>
-    <h1>DOUBT XII</h1>
-  </div>
+  <h2 class="col-lg-12 col-xs-12">Da Open Umeå BloodBowl Tournament</h2>
+  <h1 class="col-lg-12 col-xs-10">DOUBT XII</h1>
   <p class="col-lg-4 col-xs-5">Tolfte upplagan av Norrlands äldsta <a href="http://www.thenaf.net/">NAF-sanktionerade</a> BloodBowl-turnering</p>
   <h2 class="col-lg-8 col-md-7 col-xs-8">22-23 januari 2022</h2>
   </header>
