--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@ crossorigin="anonymous">
       box-shadow: inset 0 1px 1px rgb(0 0 0 / 5%);
     }
 
+    header {
+      margin-top: 20px;
+    }
+
     header h1 {
       font-family: 'Holtwood One SC', serif;
       font-size: 13vmin;
@@ -132,8 +136,7 @@ crossorigin="anonymous">
       color: #600;
       text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
     }
-    header p {
-    }
+
     h2, h3, h4 {
       font-family: 'Bevan', cursive;
       color: #900;
@@ -302,9 +305,9 @@ crossorigin="anonymous">
 <ol>
   <li>Strength of schedule</li>
   <li>TD-diff</li>
-  <li>CAS-diff (CAS som skulle ge SPP)</li>
+  <li>Injury-diff (dvs alla CAS, även de som inte normalt ger SPP)</li>
   <li>Inbördes möte</li>
-  <li>lottning</li>
+  <li>Lottning</li>
 </ol>
 
 <h4>Learning by doing</h4>
@@ -413,7 +416,7 @@ crossorigin="anonymous">
   <li>0-1 Halfling master chef</li>
   <li>0-2 Bloodweiser kegs</li>
   <li>0-3 Bribes</li>
-  <li>0-2 Wandering apothecaries/li>
+  <li>0-2 Wandering apothecaries</li>
   <li>0-1 Mortuary assistant</li>
   <li>0-1 Plague doctor</li>
   <li>0-1 Riotous rookies</li>
