--- a/index.html
+++ b/index.html
@@ -129,12 +129,22 @@ crossorigin="anonymous">
       margin-top: -1vmin;
       color: #800;
       text-shadow:  -3px 0 white, 0 3px white, 3px 0 white, 0 -3px white;
+      position: relative;
     }
+
+    header h1 em,
     header h2 {
       margin-top: 0;
       font-size: 3.5vmin;
       color: #600;
       text-shadow: -2px 0 white, 0 2px white, 2px 0 white, 0 -2px white;
+    }
+
+    header h1 em {
+      position: absolute;
+      right: 0;
+      font-size: 4.5vmin;
+      bottom: 1.4vmin;
     }
 
     h2, h3, h4 {
@@ -170,8 +180,8 @@ crossorigin="anonymous">
   <header class="header">
   <img src="giant.sq.png" class="giant"/>
   <h2 class="col-lg-12 col-xs-12">Da Open Umeå BloodBowl Tournament</h2>
-  <h1 class="col-lg-12 col-xs-10">DOUBT XII</h1>
-  <p class="col-lg-4 col-xs-5">Tolfte upplagan av Norrlands äldsta <a href="http://www.thenaf.net/">NAF-sanktionerade</a> BloodBowl-turnering</p>
+  <h1 class="col-lg-12 col-xs-10">DOUBT XII <em>- Not a small thing!</em></h1>
+  <p class="col-lg-4 col-xs-6">Tolfte upplagan av Norrlands äldsta <a href="http://www.thenaf.net/">NAF-sanktionerade</a> BloodBowl-turnering</p>
   <h2 class="col-lg-8 col-md-7 col-xs-8">22-23 januari 2022</h2>
   </header>
 
@@ -232,6 +242,7 @@ crossorigin="anonymous">
   <dt>Svart</dt>
     <dd>Lite mer lugna skills, Kick, Sure Hands, Pro etc.</dd>
 </dl>
+<p>Om båda coacherna går med på andra färger är det ok, annars gäller ovanstående som grundläggande regler.</p>
 </div>
 
 <div class="col-sm-12 col-md-12 schema col-lg-4 col-xs-12">
@@ -284,9 +295,9 @@ crossorigin="anonymous">
 
     <h4>Turneringsstil</h4>
     <p><blockquote>Giants får köpas in! Alla vet väl att jättar bor i karga landskap där de kan äta sälar och renar när de vill. De får dessutom vara ensamma. Nu har de dock varit ensamma för länge och de vill träffa folk och leka! Det betyder att de har smugit sig in på varje roster för denna turnering.</blockquote> En Giant från death zone räknas med i varje lags roster och kan således vara spelare nr 11 för priset av 300.000 (ja något billigare än priset i Death Zone)</p>
-    <p>Detta är resurrection tournament, inga SPP kan fås och eventuella skador eller dödsfall förs inte över till nästa match.</p>
+    <p>Resurrection, 6 rundor swiss. Högst poäng efter match 6 vinner.</p>
+    <p><em>Resurrection tournament</em>: inga SPP kan fås och eventuella skador eller dödsfall förs inte över till nästa match.</p>
     <p>Alla lag räknas ha samma TV vid matchstart.</p>
-    <p>Swiss-lottning inför varje runda.</p>
     </div>
 
 <div class="col-md-6">
@@ -360,7 +371,7 @@ crossorigin="anonymous">
   All players increase their PA characteristic by 1 (4+ becomes 3+, - becomes 6+ etc). Also, if the pass is not caught, including failed conversions of a deflection, an AV roll is made against the player failing the catch. This is applied to failed kick off catches, but not throw ins nor hand offs. Note that a player may throw the ball on an opposing player in an attempt to injury him. However a pass not caught by a teammate is still considered a turnover.
 </dd>
 <dt>5</dt>
-<dt>Red cross field day</dt>
+<dt>Red Cross Field Day</dt>
 <dd><blockquote>The local Red Cross personel has decided that this is the day to practise their skills in action. Now you can get more then just a fashioned beard trim and a nice haircut on the sideline! Unfortunatly, this means that the ref’s are kicking it back and enjoying the show - ”If they want to practise, let them!”</blockquote></dd>
 <dd>Both teams each recieve a wandering apothecary (or igor or mortuary assistant). Both teams also recieve a bribe.</dd>
 
@@ -393,7 +404,7 @@ crossorigin="anonymous">
     Freezing conditions and heavy falls makes the players behave irrational. The snowfall blocks the players visibility and something that was considered a bad move yesterday doesn’t seem so bad now!
   </blockquote>
 </dd>
-<dd>All players with really stupid or the bone-head traits loses these traits. All other players gain bone-head.</dd>
+<dd>During Blizzard all players with really stupid or the bone-head traits loses these traits, while all other players gain bone-head.</dd>
 </dl>
 </div>
 </div>
