--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ crossorigin="anonymous">
       position: absolute;
       right: 0;
       font-size: 4.5vmin;
-      bottom: 1.4vmin;
+      bottom: 1.45vmin;
     }
 
     th, h2, h3, h4 {
@@ -282,7 +282,7 @@ crossorigin="anonymous">
 </ul>
 </div>
 
-<div class="col-lg-2 col-md-12 col-sm-7 col-xs-12">
+<div class="col-lg-4 col-md-12 col-sm-7 col-xs-12">
 <h3>Anmälan</h3>
 <p>Skicka mail till <a href="mailto:krished@hotmail.com">krished@hotmail.com</a> med
 <ol>
@@ -547,6 +547,10 @@ crossorigin="anonymous">
     <caption>Always occupies 4 squares.
     Does not have tackle zones to their backs. Make clear in which direction the Giant is facing.</caption>
   </table>
+  <h5>Throwing other players</h5>
+  <p>When a Giant attempts to throw a team-mate, you may re-roll a Fumbled throw</p>
+  <h5>A Giant obstruction</h5>
+  <p>When a Giant interferes with a pass, it reduces any negative motifiers that would normally apply by 2</p>
 
 <h4>Inducements</h4>
 <p>Inducements som får köpas in till laget för de 1.150.000 utöver vanliga regler för skapande av roster är (följer de officiella reglerna gällande priser för olika lag):</p>
