--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ crossorigin="anonymous">
 <ol>
   <li>Strength of schedule</li>
   <li>TD-diff</li>
-  <li>Injury-diff (dvs alla CAS, även de som inte normalt ger SPP)</li>
+  <li>CAS-diff, <em>även från Fouls och Crowd surf</em></li>
   <li>Inbördes möte</li>
   <li>Lottning</li>
 </ol>
@@ -482,7 +482,7 @@ crossorigin="anonymous">
     Freezing conditions and heavy falls makes the players behave irrational. The snowfall blocks the players visibility and something that was considered a bad move yesterday doesn’t seem so bad now!
   </blockquote>
 </dd>
-<dd>During Blizzard all players with really stupid or the bone-head traits loses these traits, while all other players gain bone-head.</dd>
+<dd>During Blizzard all players with Really Stupid or the Bone Head traits loses these traits, while all other players gain Bone Head.</dd>
 </dl>
 </div>
 </div>
