giant skill clarification

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ crossorigin="anonymous">
 <li>Varje coach köper sitt lag upp till Team Value 1.150.000.</li>
 <li>Varje lag måste ha minst 11 spelare, eventuell star player räknas inte. </li>
 <li>Eventuellt överblivna gp vid skapandet av lag är vaskade.</li>
-<li>0-1 Giant från Death Zone anses ingå i varje lags roster för 300.000</li>
+<li>0-1 Giant från Death Zone anses ingå i varje lags roster för 300.000.</li>
 </ul>
 </div>
 
@@ -572,7 +572,7 @@ crossorigin="anonymous">
 </ul>
 </div>
 
-<div class="col-md-8" id="skills">
+<div class="col-md-7 col-md-offset-1" id="skills">
 <h4>Skills</h4>
 <p>För varje tier finns tre skill packs <i class="fa fa-gift" role="presentation"></i> att välja bland, utöver det gäller alltid följande:
 </p>
@@ -580,6 +580,7 @@ crossorigin="anonymous">
   <li>En skill får köpas högst två gånger till laget</li>
   <li>Varje lag kan stacka 2 primary skills på högst 1 spelare för en kostnad av 1 primary och 1 secondary skill.</li>
   <li>En secondary skill får bytas mot en primary skill om så önskas.</li>
+  <li>Eventuell Giant får inte tilldelas ytterligare skills.</li>
 </ul>
 
 <h5>Tier 1</h5>
