--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@ crossorigin="anonymous">
       margin-bottom: 15px;
     }
 
+    .parking {
+      display: inline-block;
+      background-color: blue;
+      border: 1px solid white;
+      outline: 1px solid blue;
+      padding: 0 2px;
+      text-transform: uppercase;
+      font-weight: bold;
+      border-radius: 3px;
+      color: white;
+    }
+
     .hidden {
       display: none;
     }
@@ -266,24 +278,27 @@ crossorigin="anonymous">
 </div>
 <div class="row">
 
-<div class="col-lg-2 col-md-3 col-sm-9 col-xs-5">
-<h3>Lokal</h3>
+<div class="col-lg-2 col-md-3 col-sm-6 col-xs-5">
+<h4>Lokal</h4>
 <p>Thoren Business School, Järnvägsallén 24, Umeå</a></p>
-<h3>Avgift</h3>
-<p>200kr</p>
+<p>Gratis <span class="parking">p</span>-platser finns i mån av tillgång, ca 4-8 st på skolans innergård.
+  Förtur ges till långväga gäster som kört bil till Doubt enligt principen längst bort förtjänar den mest.</p>
 </div>
 
 <div class="col-lg-2 col-md-4 col-sm-9 col-xs-8">
-<h3>Frågor</h3>
+<h4>Frågor</h4>
 <ul class="fa-ul">
   <li><i class="fa-li fa fa-envelope"></i><a href="mailto:krished@hotmail.com">krished@hotmail.com</a></li>
   <li><i class="fa-li fa fa-envelope"></i><a href="http://forum.swebba.se/index.php?p=/messages/add/Marty33">PM till Marty33</a></li>
   <li><i class="fa-li fa fa-envelope-open"></i><a href="http://forum.swebba.com/index.php?p=/discussion/1928">DOUBT XII-tråden</a></li>
 </ul>
+
+<h4>Avgift</h4>
+<p>200kr, betalas på plats</p>
 </div>
 
 <div class="col-lg-4 col-md-12 col-sm-7 col-xs-12">
-<h3>Anmälan</h3>
+<h4>Anmälan</h4>
 <p>Skicka mail till <a href="mailto:krished@hotmail.com">krished@hotmail.com</a> med
 <ol>
   <li>NAF-namn</li>
