--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@ crossorigin="anonymous">
 </ul>
 
 <h4>Avgift</h4>
-<p>200kr, betalas på plats</p>
+<p>200kr</p>
+<p>Instruktioner för swish-betalning skickas ut till anmälda,
+  via mail, efter 14 januari. Kan betalas på plats i nödfall.</p>
 </div>
 
 <div class="col-lg-4 col-md-12 col-sm-7 col-xs-12">
@@ -304,7 +306,7 @@ crossorigin="anonymous">
   <li>NAF-namn</li>
   <li>NAF-nummer</li>
   <li>Telefonnummer</li>
-  <li>Ditt roster. Kan skickas senast 7 januari.</li>
+  <li>Ditt roster. Kan skickas senast 14 januari.</li>
 </ol>
 </div>
 
@@ -418,10 +420,12 @@ crossorigin="anonymous">
 <p>Som DOUBT tidigare erbjudit så erhåller lagen skills efter lottningen inför match 4.
   Dessa erhålls permanent.
   Samma regler för skills gäller som tidigare.
-  Behöver du tackle för att kunna spöa Hakflem?
+  <blockquote>Behöver du tackle för att kunna spöa Hakflem?
   Guard för att rycka skägget av dvärgarna?
   Sure Hands för att det inte ska kosta alla RR att plocka upp bollen?
-  Här har du chansen att visa din taktik med omsorg.</p>
+  Här har du chansen att visa din taktik med omsorg.
+</blockquote>
+</p>
 <p>Tier 1-3 får 2 primary skills efter match 3</p>
 <p>Tier 4-5 får 1 primary + 1 secondary efter match 3</p>
 
@@ -580,7 +584,7 @@ crossorigin="anonymous">
   <li>0-1 Biased referee</li>
   <li>0-1 Star player (beroende på skill package)
     <ul>
-      <li>Starplayer kombinationer av två spelare (t.ex. Bröderna Valen) räknas som en spelare</li>
+      <li>Starplayer kombinationer av två spelare (t.ex. Bröderna Swift) räknas som en spelare</li>
       <li><em>Highlander rule</em>: Om två mötandes lag hyr samma Star player till sin match kommer denne inte dyka upp till denna match.</li>
     </ul>
   </li>
